# signalHandlers

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main
lib/: signal_func.c  signal_func.h
src/: main.c
